--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <li><a href=""><img src="./src/img/email.png" alt="email"></a></li>
             <li><a href=""><img src="./src/img/what.png" alt="Whats"></a></li>
         </ul>
-        <p>&copy;Todos os direitos reservados - Fazenda Belo Sol 2024</p>
+        <p>&copy;Todos os direitos reservados . Fazenda Belo Sol 2024</p>
         <a href="#inicio">Voltar ao topo</a>
     </footer>
 </body>
